--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <p>For instagram click here<a href="https://www.instagram.com/">
     <img src="/download.jpg" width="35"  alt="Image is not Loading">
     </a></p>
-    <p>For facebook click here <a href="https://www.facebook.com/"><img src="/fb.jpg" width="40"></a></p>
+    <p>For facebook click here <a href="https://www.facebook.com/"><img src="https://bimaldevasia.github.io/new/fb.jpg" width="40"></a></p>
 </body>
 </html>
