--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>For instagram click here<a href="https://www.instagram.com/">
-    <img src="/download.jpg" width="35"  alt="Image is not Loading">
+    <img src="https://bimaldevasia.github.io/new/download.jpg" width="35"  alt="Image is not Loading">
     </a></p>
     <p>For facebook click here <a href="https://www.facebook.com/"><img src="https://bimaldevasia.github.io/new/fb.jpg" width="40"></a></p>
 </body>
