--- a/index.html
+++ b/index.html
@@ -6,10 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Social</title>
 </head>
-<body>
+<body><div>for being Happy click here.
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+    <button type="submit" >Happy &#128578</button> </a></div>
     <p>For instagram click here<a href="https://www.instagram.com/">
     <img src="https://bimaldevasia.github.io/new/download.jpg" width="35"  alt="Image is not Loading">
     </a></p>
     <p>For facebook click here <a href="https://www.facebook.com/"><img src="https://bimaldevasia.github.io/new/fb.jpg" width="40"></a></p>
+    <style>
+        button{
+            background-color: #c00;
+            border-radius: 2px;
+            color: #fff;
+            padding:10px 16px;
+            white-space: nowrap;
+            font: size 1.4em;
+            font: weight 500px;
+            letter-spacing: 0.5px;
+            text-transform: uppercase;
+            
+            border: none;
+            margin-left: 10px;
+            vertical-align:top;
+            border-radius: 4px;
+            transition: opacity 0.2s;
+        }
+        button:hover{
+            opacity:0.5;
+        }
+    </style>
 </body>
 </html>
